--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pàgina Web amb Editor de Text</title>
+    <title>P&agrave;gina Web amb Editor de Text</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="primera-franja">
             <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" class="logotip">
             <div class="enllacos">
-                <a href="#" class="area-privada">Àrea privada</a>
+                <a href="#" class="area-privada">&Agrave;rea privada</a>
                 <a href="#" class="contacte">Ajuda</a>
             </div>
         </div>
@@ -34,20 +34,20 @@
             <label for="menu-desplegable">Opcions:</label>
             <select name="menu-desplegable" id="menu-desplegable">
                 <option value="crear-espai">Crea un espai</option>
-                <option value="crear-procediment">Crea un procés</option>
-                <option value="editar-espai-procés">Editar un espai/procés</option>
+                <option value="crear-procediment">Crea un proc&eacute;s</option>
+                <option value="editar-espai-proc&eacute;s">Editar un espai/proc&eacute;s</option>
             </select>
 
             <label for="menu-publicar">Publicar:</label>
             <select name="menu-publicar" id="menu-publicar" onchange="gestionarPublicacio(this.value)">
-                <option value="">--Selecciona una opció--</option>
+                <option value="">--Selecciona una opci&oacute;--</option>
                 <option value="base-coneixement">Base de Coneixement</option>
-                <option value="cataleg">Catàleg</option>
+                <option value="cataleg">Cat&agrave;leg</option>
             </select>
 
             <label for="menu-exportacio">Exportar:</label>
             <select name="menu-exportacio" id="menu-exportacio" onchange="exportar(this.value)">
-                <option value="">--Selecciona una opció--</option>
+                <option value="">--Selecciona una opci&oacute;--</option>
                 <option value="word">Document Word</option>
                 <option value="pdf">Document PDF</option>
                 <option value="html">Document HTML</option>
@@ -60,7 +60,7 @@
                     <button onclick="document.execCommand('bold')" aria-label="Posa el text en negreta"><strong>Bold</strong></button>
                     <button onclick="document.execCommand('italic')" aria-label="Posa el text en cursiva"><em>Italic</em></button>
                     <button onclick="document.execCommand('underline')" aria-label="Posa el text subratllat"><u>Underline</u></button>
-                    <button onclick="document.execCommand('insertUnorderedList')" aria-label="Crea una llista no ordenada">• List</button>
+                    <button onclick="document.execCommand('insertUnorderedList')" aria-label="Crea una llista no ordenada">&bull; List</button>
                     <button onclick="document.execCommand('insertOrderedList')" aria-label="Crea una llista ordenada">1. List</button>
                     
                     <label for="colorPicker">Color:</label>
@@ -69,7 +69,7 @@
                     <span id="icona-publicacio"></span>
                 </div>
                 <div id="editor" contenteditable="true" aria-label="Editor de text">
-                    <article><p>Escriu el teu document aquí...</p></article>
+                    <article><p>Escriu el teu document aqu&iacute;...</p></article>
                 </div>
                 <button id="guardar" onclick="desarContingut()">Desar com a fitxer</button>
             </div>
@@ -105,12 +105,12 @@
 
             <h3>Plantilles disponibles:</h3>
             <div id="llista-plantilles">
-                <div class="banner" onclick="carregarPlantilla('informe')">Plantilla d’Informe</div>
+                <div class="banner" onclick="carregarPlantilla('informe')">Plantilla d&rsquo;Informe</div>
                 <div class="banner" onclick="carregarPlantilla('ofici')">Plantilla d'Ofici</div>
-                <div class="banner" onclick="carregarPlantilla('resolucio')">Plantilla de Resolució</div>
-<div class="banner" onclick="carregarPlantilla('acta')">Plantilla d’Acta d’inspecció</div>
-<div class="banner" onclick="carregarPlantilla('requeriment')">Plantilla de Requeriment</div>
-<div class="banner" onclick="carregarPlantilla('carta')">Plantilla de Carta</div>
+                <div class="banner" onclick="carregarPlantilla('resolucio')">Plantilla de Resoluci&oacute;</div>
+                <div class="banner" onclick="carregarPlantilla('acta')">Plantilla d&rsquo;Acta d&rsquo;inspecci&oacute;</div>
+                <div class="banner" onclick="carregarPlantilla('requeriment')">Plantilla de Requeriment</div>
+                <div class="banner" onclick="carregarPlantilla('carta')">Plantilla de Carta</div>
 
             </div>
 
@@ -118,9 +118,9 @@
             <h3>Versions dels Documents:</h3>
             <div class="versions-container">
                 <ul id="llista-versions">
-                    <li>Document versió 1</li>
-                    <li>Document versió 2</li>
-                    <li>Document versió 3</li>
+                    <li>Document versi&oacute; 1</li>
+                    <li>Document versi&oacute; 2</li>
+                    <li>Document versi&oacute; 3</li>
                 </ul>
             </div>
         </section>
@@ -130,11 +130,11 @@
         function carregarPlantilla(tipus) {
             let editor = document.getElementById('editor');
             if (tipus === 'informe') {
-                editor.innerHTML = '<h2>Plantilla d’Informe</h2><p>Aquesta és una plantilla per a un informe oficial. Afegeix aquí el contingut necessari...</p>';
+                editor.innerHTML = '<h2>Plantilla d&rsquo;Informe</h2><p>Aquesta &eacute;s una plantilla per a un informe oficial. Afegeix aqu&iacute; el contingut necessari...</p>';
             } else if (tipus === 'ofici') {
-                editor.innerHTML = '<h2>Plantilla d\'Ofici</h2><p>Aquesta és una plantilla per a un ofici oficial. Afegeix aquí el contingut necessari...</p>';
+                editor.innerHTML = '<h2>Plantilla d\'Ofici</h2><p>Aquesta &eacute;s una plantilla per a un ofici oficial. Afegeix aqu&iacute; el contingut necessari...</p>';
             } else if (tipus === 'resolucio') {
-                editor.innerHTML = '<h2>Plantilla de Resolució</h2><p>Aquesta és una plantilla per a una resolució oficial. Afegeix aquí el contingut necessari...</p>';
+                editor.innerHTML = '<h2>Plantilla de Resoluci&oacute;</h2><p>Aquesta &eacute;s una plantilla per a una resoluci&oacute; oficial. Afegeix aqu&iacute; el contingut necessari...</p>';
             }
         }
 
@@ -160,7 +160,7 @@
                 link.download = 'document.docx';
                 link.click();
             } else if (tipus === 'pdf') {
-                alert("Exportar a PDF no està implementat.");
+                alert("Exportar a PDF no est&agrave; implementat.");
             } else if (tipus === 'html') {
                 let blob = new Blob([editorContent], { type: 'text/html' });
                 let link = document.createElement('a');
