--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="primera-franja">
             <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" class="logotip">
             <div class="enllacos">
-                <a href="#" class="area-privada">Àrea privada</a>
-                <a href="#" class="contacte">Ajuda</a>
+                <a href="" class="area-privada">Area privada</a>
+                <a href="" class="contacte">Ajuda</a>
             </div>
         </div>
         <div class="segona-franja">
@@ -34,20 +34,20 @@
             <label for="menu-desplegable">Opcions:</label>
             <select name="menu-desplegable" id="menu-desplegable">
                 <option value="crear-espai">Crea un espai</option>
-                <option value="crear-procediment">Crea un procés</option>
-                <option value="editar-espai-proc&eacute;s">Editar un espai/procés</option>
+                <option value="crear-procediment">Crea un proces</option>
+                <option value="editar-espai-proc&eacute;s">Editar un espai/proces</option>
             </select>
 
             <label for="menu-publicar">Publicar:</label>
             <select name="menu-publicar" id="menu-publicar" onchange="gestionarPublicacio(this.value)">
-                <option value="">--Selecciona una opció--</option>
+                <option value="">--Selecciona una opcio--</option>
                 <option value="base-coneixement">Base de Coneixement</option>
-                <option value="cataleg">Catàleg</option>
+                <option value="cataleg">Cataleg</option>
             </select>
 
             <label for="menu-exportacio">Exportar:</label>
             <select name="menu-exportacio" id="menu-exportacio" onchange="exportar(this.value)">
-                <option value="">--Selecciona una opció--</option>
+                <option value="">--Selecciona una opcio--</option>
                 <option value="word">Document Word</option>
                 <option value="pdf">Document PDF</option>
                 <option value="html">Document HTML</option>
@@ -60,7 +60,7 @@
                     <button onclick="document.execCommand('bold')" aria-label="Posa el text en negreta"><strong>Bold</strong></button>
                     <button onclick="document.execCommand('italic')" aria-label="Posa el text en cursiva"><em>Italic</em></button>
                     <button onclick="document.execCommand('underline')" aria-label="Posa el text subratllat"><u>Underline</u></button>
-                    <button onclick="document.execCommand('insertUnorderedList')" aria-label="Crea una llista no ordenada">&bull; List</button>
+                    <button onclick="document.execCommand('insertUnorderedList')" aria-label="Crea una llista no ordenada">- List</button>
                     <button onclick="document.execCommand('insertOrderedList')" aria-label="Crea una llista ordenada">1. List</button>
                     
                     <label for="colorPicker">Color:</label>
@@ -69,7 +69,7 @@
                     <span id="icona-publicacio"></span>
                 </div>
                 <div id="editor" contenteditable="true" aria-label="Editor de text">
-                    <article><p>Escriu el teu document aquí...</p></article>
+                    <article><p>Escriu el teu document aqui...</p></article>
                 </div>
                 <button id="guardar" onclick="desarContingut()">Desar</button>
             </div>
@@ -107,8 +107,8 @@
             <div id="llista-plantilles">
                 <div class="banner" onclick="carregarPlantilla('informe')">Plantilla d'Informe</div>
                 <div class="banner" onclick="carregarPlantilla('ofici')">Plantilla d'Ofici</div>
-                <div class="banner" onclick="carregarPlantilla('resolucio')">Plantilla de Resolució</div>
-                <div class="banner" onclick="carregarPlantilla('acta')">Plantilla d'Acta d'inspecció</div>
+                <div class="banner" onclick="carregarPlantilla('resolucio')">Plantilla de Resolucio</div>
+                <div class="banner" onclick="carregarPlantilla('acta')">Plantilla d'Acta d'inspeccio</div>
                 <div class="banner" onclick="carregarPlantilla('requeriment')">Plantilla de Requeriment</div>
                 <div class="banner" onclick="carregarPlantilla('carta')">Plantilla de Carta</div>
 
@@ -118,9 +118,9 @@
             <h3>Versions dels Documents:</h3>
             <div class="versions-container">
                 <ul id="llista-versions">
-                    <li>Document versió 1</li>
-                    <li>Document versió 2</li>
-                    <li>Document versió 3</li>
+                    <li>Document vers-1</li>
+                    <li>Document vers-2</li>
+                    <li>Document vers-3</li>
                 </ul>
             </div>
         </section>
