--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Espais</a></li>
                 <li><a href="#">Processos</a></li>
                 <li><a href="#">Documents</a></li>
-                <li><a href="#">Contacte</a></li>
+                <li><a href="#">Equip</a></li>
             </ul>
         </nav>
     </header>
