--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <body>
     <header class="capcalera">
         <div class="primera-franja">
-            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" class="logotip">
+            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" style="width: 50%;" class="logotip">
             <div class="enllacos">
                 <a href="" class="area-privada">Area privada</a>
                 <a href="" class="contacte">Ajuda</a>
             </div>
         </div>
         <div class="segona-franja">
-            <h1 class="titol-web">Index.IA</h1>
+            <h1 class="titol-web">Index.IA - Inici</h1>
         </div>
         <nav class="tercera-franja">
             <ul class="menu-navegacio">
-                <li><a href="#">Inici</a></li>
-                <li><a href="#">Espais</a></li>
-                <li><a href="#">Processos</a></li>
-                <li><a href="#">Documents</a></li>
+                <li><a href="inici.html">Inici</a></li>
+				<l<li><a href="index.html">Crea</a></li>
+                <li><a href="#">Espais de Coneixement</a></li>
+                <li><a href="#">Catàleg de Processos</a></li>
                 <li><a href="#">Equip</a></li>
             </ul>
         </nav>
@@ -41,17 +41,18 @@
             <label for="menu-publicar">Publicar:</label>
             <select name="menu-publicar" id="menu-publicar" onchange="gestionarPublicacio(this.value)">
                 <option value="">--Selecciona una opcio--</option>
-                <option value="base-coneixement">Base de Coneixement</option>
-                <option value="cataleg">Cataleg</option>
+                <option value="base-coneixement">a la Base de Coneixement</option>
+                <option value="cataleg">al Cataleg</option>
             </select>
 
             <label for="menu-exportacio">Exportar:</label>
             <select name="menu-exportacio" id="menu-exportacio" onchange="exportar(this.value)">
                 <option value="">--Selecciona una opcio--</option>
-                <option value="word">Document Word</option>
-                <option value="pdf">Document PDF</option>
-                <option value="html">Document HTML</option>
+                <option value="word">a document Word</option>
+                <option value="pdf">a document PDF</option>
+                <option value="html">a document HTML</option>
             </select>
+
         </section>
         
         <section class="col-centre">
