--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header class="capcalera">
         <div class="primera-franja">
-            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" style="width: 50%;" class="logotip">
+            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" style="width: 50%; height: 50%;" class="logotip">
+
             <div class="enllacos">
                 <a href="" class="area-privada">Area privada</a>
                 <a href="" class="contacte">Ajuda</a>
