--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 <body>
     <header class="capcalera">
         <div class="primera-franja">
-            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" style="width: 50%; height: 50%;" class="logotip">
-
+            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip Generalitat" class="logotip">
             <div class="enllacos">
-                <a href="" class="area-privada">Area privada</a>
-                <a href="" class="contacte">Ajuda</a>
+                <a href="#" class="area-privada">Àrea privada</a>
+                <a href="#" class="contacte">Ajuda</a>
             </div>
         </div>
         <div class="segona-franja">
-            <h1 class="titol-web">Index.IA - Inici</h1>
+            <h1 class="titol-web">Index.IA</h1>
         </div>
         <nav class="tercera-franja">
             <ul class="menu-navegacio">
                 <li><a href="inici.html">Inici</a></li>
-				<l<li><a href="index.html">Crea</a></li>
-                <li><a href="#">Espais de Coneixement</a></li>
-                <li><a href="#">Catàleg de Processos</a></li>
-                <li><a href="#">Equip</a></li>
+                <li><a href="index.html">Crea</a></li>
+                <li><a href="#">Espais</a></li>
+                <li><a href="#">Cataleg</a></li>
+                <li><a href="#">Contacte</a></li>
             </ul>
         </nav>
     </header>
+
     
     <main class="cos-principal">
         <section class="col-esquerra">
