--- a/Inici.html
+++ b/Inici.html
@@ -9,9 +9,9 @@
 <body>
     <header class="capcalera">
         <div class="primera-franja">
-            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" style="width: 50%; height: 50%;" class="logotip">
+            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" class="logotip">
             <div class="enllacos">
-                <a href="index.html" class="area-privada">Crea</a>
+                <a href="" class="area-privada">Area privada</a>
                 <a href="" class="contacte">Ajuda</a>
             </div>
         </div>
@@ -21,6 +21,7 @@
         <nav class="tercera-franja">
             <ul class="menu-navegacio">
                 <li><a href="inici.html">Inici</a></li>
+                <li><a href="index.html">Crea</a></li>
                 <li><a href="#">Espais</a></li>
                 <li><a href="#">Cataleg</a></li>
                 <li><a href="#">Documents</a></li>
@@ -52,10 +53,10 @@
             <div class="seccio">
                 <h2>Processos</h2>
                 <div class="banners" id="banners-processos">
-                    <div class="banner">Procés A1458 Cultiu Ecològic</div>
-                    <div class="banner">Procés A0236 Reciclatge Agrícola</div>
-                    <div class="banner">Procés A8522 Eficiència de l'Aigua</div>
-                    <div class="banner">Procés M1252 Innovació Tecnològica</div>
+                    <div class="banner">Procés Cultiu Ecològic</div>
+                    <div class="banner">Procés Reciclatge Agrícola</div>
+                    <div class="banner">Procés Eficiència de l'Aigua</div>
+                    <div class="banner">Procés Innovació Tecnològica</div>
                 </div>
             </div>
 
@@ -63,10 +64,10 @@
             <div class="seccio">
                 <h2>Documents</h2>
                 <div class="banners" id="banners-documents">
-                    <div class="banner">A1052-DO4 Agricultura 2024</div>
-                    <div class="banner">A0652-DO2 Document Polítiques Verdes</div>
-                    <div class="banner">A0232-DO8 Aigua i Rec</div>
-                    <div class="banner">M1256-DO4 Tecnologies Emergents</div>
+                    <div class="banner">Document Agricultura 2024</div>
+                    <div class="banner">Document Polítiques Verdes</div>
+                    <div class="banner">Document Aigua i Rec</div>
+                    <div class="banner">Document Tecnologies Emergents</div>
                 </div>
             </div>
         </section>
