--- a/Inici.html
+++ b/Inici.html
@@ -9,23 +9,22 @@
 <body>
     <header class="capcalera">
         <div class="primera-franja">
-            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip de la Generalitat de Catalunya" class="logotip">
+            <img src="https://identitatcorporativa.gencat.cat/web/.content/Documentacio/descarregues/dpt/BN/Presidencia/gencat_cat_blanc.png" alt="Logotip Generalitat" class="logotip">
             <div class="enllacos">
                 <a href="" class="area-privada">Area privada</a>
                 <a href="" class="contacte">Ajuda</a>
             </div>
         </div>
         <div class="segona-franja">
-            <h1 class="titol-web">Index.IA - Inici</h1>
+            <h1 class="titol-web">Index.IA</h1>
         </div>
         <nav class="tercera-franja">
             <ul class="menu-navegacio">
                 <li><a href="inici.html">Inici</a></li>
                 <li><a href="index.html">Crea</a></li>
-                <li><a href="#">Espais</a></li>
-                <li><a href="#">Cataleg</a></li>
-                <li><a href="#">Documents</a></li>
-                <li><a href="#">Equip</a></li>
+                <li><a href="inici.html">Espais</a></li>
+                <li><a href="inici.html">Cataleg</a></li>
+                <li><a href="inici.html">Equip</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +32,7 @@
     <main class="cos-principal">
         <!-- Cercador gran a la part de dalt -->
         <section class="cercador-seccio">
-            <input type="text" id="cercador-principal" onkeyup="filtrarBanners()" placeholder="Cerca informació agrícola..." class="cercador-gran">
+            <input type="text" id="cercador-principal" onkeyup="filtrarBanners()" placeholder="Cerca espais i processos..." class="cercador-gran">
         </section>
 
         <!-- Seccions: Espais, Processos, Documents -->
@@ -42,10 +41,10 @@
             <div class="seccio">
                 <h2>Espais</h2>
                 <div class="banners" id="banners-espais">
-                    <div class="banner">Espai Agricultura Orgànica</div>
+                    <div class="banner">Espai Agricultura Jove</div>
                     <div class="banner">Espai Tecnologia Verda</div>
-                    <div class="banner">Espai Innovació Agrícola</div>
-                    <div class="banner">Espai Polítiques Agràries</div>
+                    <div class="banner">Espai Innovar en Reg</div>
+                    <div class="banner">Espai Inspeccio d'Ajuts</div>
                 </div>
             </div>
             
@@ -53,10 +52,10 @@
             <div class="seccio">
                 <h2>Processos</h2>
                 <div class="banners" id="banners-processos">
-                    <div class="banner">Procés Cultiu Ecològic</div>
-                    <div class="banner">Procés Reciclatge Agrícola</div>
-                    <div class="banner">Procés Eficiència de l'Aigua</div>
-                    <div class="banner">Procés Innovació Tecnològica</div>
+                    <div class="banner">Proces A1458 Cultiu Ecologic</div>
+                    <div class="banner">Proces A2366 Reciclatge Agricola</div>
+                    <div class="banner">Proces A4522 Eficiencia de l'Aigua</div>
+                    <div class="banner">Proces A7855 Innovacio en TIC</div>
                 </div>
             </div>
 
@@ -64,10 +63,10 @@
             <div class="seccio">
                 <h2>Documents</h2>
                 <div class="banners" id="banners-documents">
-                    <div class="banner">Document Agricultura 2024</div>
-                    <div class="banner">Document Polítiques Verdes</div>
-                    <div class="banner">Document Aigua i Rec</div>
-                    <div class="banner">Document Tecnologies Emergents</div>
+                    <div class="banner">A1458-DO2 Ajuts Agricultura 2024</div>
+                    <div class="banner">A6588-DO5 Politiques Verdes</div>
+                    <div class="banner">M4582-DO8 Comunicacio de Cremes</div>
+                    <div class="banner">A1245-DO9 Acta inspeccio</div>
                 </div>
             </div>
         </section>
@@ -104,3 +103,4 @@
     </script>
 </body>
 </html>
+
